<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Contacts</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_save">SaveActivity</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="email">E-Mail</string>
    <string name="ph">Phone</string>
    <string name="save">Save Contact</string>
    <string name="title_activity_edit">EditActivity</string>

</resources>
