<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.contactmanager.EditActivity" >
    
  <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:weightSum="100">
      <TextView
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/fname"
        android:layout_weight="60"
        android:gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceMedium" />
       
      <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="text"
        android:layout_weight="40"/>
  </LinearLayout>
    
  <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:weightSum="100">
      
       <TextView
        android:id="@+id/textView2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/lname"
        android:layout_weight="60"
        android:gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
       <EditText
        android:id="@+id/editText2"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="text"
        android:layout_weight="40"/>
      
       
      </LinearLayout>

  <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:weightSum="100">
      
       <TextView
        android:id="@+id/textView3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/ph"
        android:layout_weight="60"
        android:gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
       <EditText
        android:id="@+id/editText3"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="phone"
        android:layout_weight="40"/>
      
      </LinearLayout>
      
  <LinearLayout android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:weightSum="100">
      
       <TextView
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/email"
        android:layout_weight="60"
        android:gravity="bottom"
        android:textAppearance="?android:attr/textAppearanceMedium" />
      
       <EditText
        android:id="@+id/editText4"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:inputType="textEmailAddress"
        android:layout_weight="40"/>
      
      </LinearLayout>
  
   
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="66dp"
        android:layout_gravity="center"
        android:text="@string/save" 
        android:onClick="save"/>

</LinearLayout>
